# tmux-notify

./: .gitignore  Cargo.toml  Makefile  README.md  notify.tmux
.github/workflows/: ci.yml  release.yml
examples/: claude-code-notify.sh  codex-notify.sh
scripts/: install.sh  notify-hook.sh  notify-popup.sh  notify-status.sh
src/: db.rs  main.rs  models.rs
tests/: e2e_test.sh
